4/best-practices-analyzer/gatekeeper/standalone/installing-opa-gatekeeper-library-constraint-templates/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReplicaLimits
metadata:
  name: replica-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    ranges:
    - min_replicas: 1
      max_replicas: 5
